Add native image configuration generation command.